[gd_scene load_steps=10 format=3 uid="uid://hhm0f2nhdcni"]

[ext_resource type="Script" path="res://scripts/text_field.gd" id="1_15y2e"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="3_5rssb"]
[ext_resource type="Resource" uid="uid://80ompw780k36" path="res://dialog.tres" id="4_8383y"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="5_j5op0"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="6_vysyh"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="7_pmhq1"]

[sub_resource type="RichTextEffect" id="RichTextEffect_ohq7f"]
script = ExtResource("5_j5op0")

[sub_resource type="RichTextEffect" id="RichTextEffect_gs355"]
script = ExtResource("6_vysyh")

[sub_resource type="RichTextEffect" id="RichTextEffect_q8mhm"]
script = ExtResource("7_pmhq1")

[node name="TextField" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15y2e")

[node name="DialogueBox" type="Panel" parent="."]
layout_mode = 2
offset_left = 302.0
offset_top = 450.0
offset_right = 1185.0
offset_bottom = 682.0
mouse_force_pass_scroll_events = false
script = ExtResource("3_5rssb")
data = ExtResource("4_8383y")
start_id = "1"
scroll_speed = -3
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_ohq7f"), SubResource("RichTextEffect_gs355"), SubResource("RichTextEffect_q8mhm")])
options_position = 0
hide_on_dialogue_end = false

[node name="PortraitVBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 447.0
offset_right = 280.0
offset_bottom = 680.0
